--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,166 +1,25 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
-    font-family: 'Poppins', sans-serif;
-    background-color: #2c2f3b;
+    background: #000;
 }
-
-header {
-    width: 100%;
-    height: auto;
-}
-
-header nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background-color: rgba(24, 24, 24);
-}
-
-header nav .logo {
-    width: 100px;
-}
-
-header nav ul {
-    display: flex;
-    list-style: none;
-}
-
-header nav ul li {
-    margin-left: 30px;
-}
-
-header nav ul li a {
-    text-decoration: none;
-    text-transform: capitalize;
-    color: #fff;
-    font-size: 14px;
-    transition: all 0.3s;
-}
-
-header nav ul li a.github, header nav ul li a.github:hover{
-    color: #FDCC34;
-    margin-right: 40px;
-}
-
-header nav ul li a.active, header nav ul li a:hover {
-    color: #3079ed;
-}
-
-.random-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 90vh;
-}
-.card{
-    width: 260px;
-    height: 500px;
-    background: #FEFEFE;
-    border-radius: 10px;
-    overflow: hidden;
-    position: relative;
-}
-.top-content{
-    position: relative;
-    width: 100%;
-    height: 260px;
-    display: flex;
-    background-color:  #FDCC34;
-    border-radius: 0% 0% 8% 8%;
-}
-.top-content .profile-image img{
-    width: 100%;
-    height: 100%;
-}
-.top-bar{
+  
+div {
     position: absolute;
-    padding: 20px 16px;
-    display: flex;
-    justify-content: space-between;
-    width: 88%;
-}
-.top-icons{
-    width: 22px;
-    height: 25px;
-    cursor: pointer;
-}
-.mid-content{
-    display: flex;
-    justify-content: center;
-}
-.mid-content .short-detail{
-    background-color: #fff;
-    padding: 20px 0px 10px 0px;
-    font-family: 'Nunito', sans-serif;
-    position: absolute;
-    top: 35%;
-    box-shadow: 2px 2px 20px rgba(0,0,0,0.2);
-    border-radius: 10px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    
+    width: 60%;
+    height: 70%;
+  
+    padding: 20px;  
+    /*background: red;
+    color: white;*/
     text-align: center;
-    width: 220px;
-    height: 200px;
-    z-index: 100;
-}
-.mid-content .short-detail h3{
-    font-size: 12px;
-}
-.mid-content .short-detail h3 img{
-    width: 10px;
-}
-.mid-content .short-detail span{
-    font-size: 12px;
-    font-weight: 500;
-    color: #b6b7b8;
-}
-.mid-content .short-detail p{
-    font-size: 11px;
-    margin-top: 8px;
-    padding: 0 10px;
+    /*box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);*/
 }
 
-.follow-followers{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 15px;
-    border-top: 1px solid #eee;
-}
-.follow-followers span{
-    font-size: 10px !important;
-}
-.follow-followers p{
-    margin: 0 !important;
-    color: #e6391b;
-    font-size: 14px !important;
-    font-weight: 700;
-}
-
-.bottom-content{
-    margin-top: 160px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.bottom-content button{
-    font-size: 12px;
-    margin-top: 8px;
-    background-color: #FDCC34;
-    border: none;
-    color: #fff;
-    padding: 12px 70px;
-    border-radius: 20px;
-    font-weight: 600;
-    cursor: pointer;
-}
-
-.bottom-content button a{
-    text-decoration: none;
-    color: white;
+h1 {
+    margin-top: 10%;
+    font-size: 2.4rem;
+    color: rgb(104, 163, 60);
 }
